# octopust

./: .gitignore  Cargo.toml  README.md
benchmark/: benchmark.rs
docs/: architecture.md
examples/: basic_usage.rs
src/: client.rs  error.rs  lib.rs  models.rs
src/api/: accounts.rs  consumption.rs  industry.rs  mod.rs  products.rs  tariffs.rs
tests/: integration_test.rs  list_day_unit_prices.rs  list_electricity_standard_unit_prices.rs  list_electricity_standing_charges.rs  list_gas_standard_unit_prices.rs  list_gas_standing_charges.rs  list_grid_supply_points.rs  list_night_unit_prices.rs  list_products.rs  retrieve_product.rs
