[package]
name = "octopust"
version = "0.4.0"
edition = "2021"
authors = ["Shantanu Deshpande <shantanud106@gmail.com>"]
description = "A high-performance, idiomatic Rust client for the Octopus Energy API."
license = "MIT"
repository = "https://github.com/ishantanu/octopust"
homepage = "https://github.com/ishantanu/octopust"
documentation = "https://docs.rs/octopust"
readme = "README.md"
keywords = ["octopus", "energy", "api", "client", "kraken"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
base64 = "0.22.1"
